# software-renderer

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  build.sh
prebuilt/SDL2/: BUILD.md
prebuilt/SDL2/macos/arm64/include/: SDL_revision.h
scripts/: build.sh  build_sdl2_prebuilt_macos.sh  format.sh  tidy.sh
src/: main.cpp
src/app/: main.cpp
src/core/: SoftwareRenderer.cpp  SoftwareRenderer.h  Surface.cpp  Surface.h
src/platform/: IPlatform.h  InputState.cpp  InputState.h  KeyCode.h  SDLPlatform.cpp  SDLPlatform.h
